<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Background overlay -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.7"/>

    <!-- Main content layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <!-- App logo or image -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <!-- CardView for registration form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <!-- Registration form layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <!-- Name input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/name"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/account_icon"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />

            <!-- Email input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

            <!-- Password input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/password"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/lock"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

            <!-- Confirm password input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/confirm_password"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:importantForAutofill="no"
                tools:ignore="SpeakableTextPresentCheck"/>

            <!-- Register button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:fontFamily="@font/montserrat"
                android:backgroundTint="@color/primary"
                app:cornerRadius="32dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
